Fix wall loading using localForage

--- a/src/Home.css
+++ b/src/Home.css
@@ -16,6 +16,10 @@
   width: auto;
 }
 
+.detail-div {
+  text-align: center;
+}
+
 .my-masonry-grid {
   display: -webkit-box; /* Not needed if autoprefixing */
   display: -ms-flexbox; /* Not needed if autoprefixing */
